tests/fixtures/invalid/pow_int_str_int.py
# Cannot call pow() with Int, Str, Int
x = pow(1, "hello", 1)
